feat: status project services
